--- a/force-app/main/default/classes/AH_SCIM_UserSyncCallout.cls
+++ b/force-app/main/default/classes/AH_SCIM_UserSyncCallout.cls
@@ -15,7 +15,9 @@ public class AH_SCIM_UserSyncCallout
 	public String clientSecret;
 	public String clientPassword;
 	public String clientId;
-    public string baseUrl;    
+    public string baseUrl;
+    public boolean sfuserIsActive;
+	public boolean ValamisfetchedUserActiveStatus;    
     
     //Start : Inner Classes =============================
     public class ResponseToken 
@@ -38,7 +40,7 @@ public class AH_SCIM_UserSyncCallout
         ValamisAPISignUpSettings__c sr  = ValamisAPISignUpSettings__c.getOrgDefaults();
         
         companyId = sr.companyId__c;
-        //clientSecret = sr.clientSecret__c;
+        clientSecret = sr.clientSecret__c;
         clientPassword = sr.clientPassword__c;
         clientId = sr.clientId__c;
         baseUrl = sr.baseUrl__c;
@@ -47,21 +49,21 @@ public class AH_SCIM_UserSyncCallout
     public void ping() 
     {
         string endpoint = '/o/scim-rest/scim/ping';
-        String restAPIURL = baseUrl+''+endpoint;
+        String restAPIURL = this.baseUrl+''+endpoint;
         HttpRequest httpRequest = new HttpRequest();  
         httpRequest.setMethod('GET');  
-        httpRequest.setEndpoint(endpoint); 
+        httpRequest.setEndpoint(restAPIURL); 
         String response = '';
         try 
         {  
             Http http = new Http();   
             HttpResponse httpResponse = http.send(httpRequest);  
             if (httpResponse.getStatusCode() == 200 ) {  
-                System.debug(' httpResponse ' + httpResponse.getBody() ); 
+                System.debug(' httpResponse ' + httpResponse.getStatusCode() +''+httpResponse.getBody() ); 
             } 
             else {  
-                System.debug(' httpResponse ' + httpResponse.getBody() );  
-                throw new CalloutException( httpResponse.getBody() );  
+                System.debug(' httpResponse '+ httpResponse.getStatusCode() +''+ httpResponse.getBody() );  
+                throw new CalloutException( httpResponse.getStatusCode() +''+ httpResponse.getBody() );  
             }   
         } 
         catch( System.Exception e) 
@@ -77,16 +79,21 @@ public class AH_SCIM_UserSyncCallout
      * Function to check user present in valamis or not.
      * if matching user found it returns the user UUID
      */ 
-    public string checkUserExistsByUserName(string UserName)
+   
+    public string checkUserExistsByUserName(string UserName)    
     {
         string accessToken = '';
 		string endpoint = '/o/scim-rest/scim/Users';
-        string filter = 'filter='+EncodingUtil.URLENCODE('UserName eq "'+UserName+'"','UTF-8');
+        
+        //New Filter Parameter search by externalID as userIdentifier custom field
+		string filterParameter = 'urn:ietf:params:scim:schemas:extension:valamis:2.0:User:custom co {"key":"userIdentifier", "value": "'+UserName+'"}';
+        //string filter = 'filter='+EncodingUtil.URLENCODE('UserName eq "'+UserName+'"','UTF-8');       
+        string filter = 'filter='+EncodingUtil.URLENCODE(filterParameter,'UTF-8');       
         String restAPIURL = this.baseUrl+''+endpoint+'?'+filter;
         
 		//Get Access Token
         accessToken = this.getAccessToken();
-        
+        if(accessToken == null) return null;
         HttpRequest httpRequest = new HttpRequest();  
         httpRequest.setMethod('GET');             
         httpRequest.setHeader('Authorization', 'Bearer ' + accessToken);
@@ -105,8 +112,8 @@ public class AH_SCIM_UserSyncCallout
                 records = (AH_SCIM_UserSyncCallout.AH_SCIM_Users)JSON.deserialize(httpResponse.getBody(),AH_SCIM_UserSyncCallout.AH_SCIM_Users.class);
                 if(records.totalResults == 1)
                 {   
-                    system.debug(records);
-                    system.debug(records.resources[0]);
+                    //fetching original valamis side status of user record.
+                    this.ValamisfetchedUserActiveStatus = records.resources[0].active;
                     //matching user found return user ID
                     return records.resources[0].id;   
                 } 
@@ -118,7 +125,7 @@ public class AH_SCIM_UserSyncCallout
             else 
             {  
                 System.debug('httpResponse ' + httpResponse.getBody());
-                throw new CalloutException(httpResponse.getBody());  
+                throw new CalloutException( httpResponse.getStatusCode() +''+ httpResponse.getBody());
             }   
         } 
         catch( System.Exception e) 
@@ -136,6 +143,7 @@ public class AH_SCIM_UserSyncCallout
         string endpoint = '/o/scim-rest/scim/oauth2/token';
         String restAPIURL = this.baseUrl+''+endpoint;
         String requestBody = 'grant_type=password&client_id='+ this.ClientId +'&client_secret='+ this.ClientSecret;
+        system.debug(requestBody);
         AH_SCIM_UserSyncCallout.ResponseToken logintoken = null;
         String response = '';
         
@@ -158,7 +166,7 @@ public class AH_SCIM_UserSyncCallout
             } 
             else 
             {  
-                throw new CalloutException( httpResponse.getBody( ));
+                throw new CalloutException( httpResponse.getStatusCode() +''+ httpResponse.getBody());
             }   
         } 
         catch( System.Exception e) 
@@ -178,14 +186,23 @@ public class AH_SCIM_UserSyncCallout
         /* check if user already present, if present update the same user with UUID
          * if not present create the user with provided user data
          */ 
-        userUUID = this.checkUserExistsByUserName(userData.UserName);
+        //Get Access Token
+        string accessToken = this.getAccessToken();
+        if(accessToken == null) {
+            system.debug('Environment is not accessible or credentials are not matching');
+         	return;   
+        }
         
+        
+        //userUUID = this.checkUserExistsByUserName(userData.UserName);        
+        userUUID = this.checkUserExistsByUserName(userData.externalId);
+        system.debug(userUUID);
         if(userUUID != null) 
         {
             this.updateUser(userData,userUUID);
         } 
         else 
-        {
+        {	
             this.createUser(userData);
         } 
     }
@@ -201,12 +218,14 @@ public class AH_SCIM_UserSyncCallout
         
         userData.userName = '';
         
+        userdata.urn_ietf_params_scim_schemas_extension_valamis_2_0_User = new AH_SCIM_User.cls_urn_ietf_params_scim_schemas_extension_valamis_2_0_User();
         userData.meta = new AH_SCIM_User.Meta(); 
         userData.meta.resourceType = 'User';
         
         userData.schemas = new List <string>();
         userData.schemas.add('urn:ietf:params:scim:schemas:core:2.0:User');
         userData.schemas.add('urn:ietf:params:scim:schemas:extension:enterprise:2.0:User');
+        userData.schemas.add('urn:ietf:params:scim:schemas:extension:valamis:2.0:User');
 
         return userData;
     } 
@@ -218,10 +237,12 @@ public class AH_SCIM_UserSyncCallout
         String response = '';
         
         //Mark User as inactive while creating it.
-        userdata.active = false;
+        userdata.active = false; 
+        System.Debug('Create User Status' + userdata.active);
         
         //Get Access Token
         accessToken = this.getAccessToken();
+        if(accessToken == null) return;
         
         HttpRequest httpRequest = new HttpRequest();  
         httpRequest.setMethod('POST');             
@@ -233,6 +254,7 @@ public class AH_SCIM_UserSyncCallout
         
         if (jsonBody != null) 
         {
+            jsonBody = jsonBody.replace('urn_ietf_params_scim_schemas_extension_valamis_2_0_User', 'urn:ietf:params:scim:schemas:extension:valamis:2.0:User');
             httpRequest.setBody(jsonBody);
             httpRequest.setHeader('Content-length',string.valueOf(jsonBody.length()));
         }
@@ -240,24 +262,24 @@ public class AH_SCIM_UserSyncCallout
         try 
         { 
             Http http = new Http();   
-            system.debug(httpRequest);
-            system.debug(httpRequest.getBody());
             HttpResponse httpResponse = http.send(httpRequest); 
             
             if (httpResponse.getStatusCode() == 200 || httpResponse.getStatusCode() == 201) 
             {  
                 String responseBody = httpResponse.getBody();
                 AH_SCIM_user user = (AH_SCIM_user)JSON.deserialize(httpResponse.getBody(),AH_SCIM_user.class);
-                this.updateLMSUserAccessFieldStatus(userData.userName);
+                this.updateLMSUserAccessFieldStatus(userData.externalId);
             } 
             else if (httpResponse.getStatusCode() == 409) 
             {  
                 //Conflict User allredy Present
+                system.debug('Conflict User allredy Present');
+                System.debug(httpResponse.getBody());
                 System.debug(' httpResponse ' + httpResponse.getBody());
             }
             else 
             {  
-                throw new CalloutException(httpResponse.getBody());  
+                throw new CalloutException( httpResponse.getStatusCode() +''+ httpResponse.getBody());
             }   
         } 
         catch( System.Exception e) 
@@ -280,7 +302,22 @@ public class AH_SCIM_UserSyncCallout
 		
         //Get Access Token
         accessToken = this.getAccessToken();
-        
+        if(accessToken == null) 
+        {
+         	return;   
+        }
+        //preserve user status at valamis side
+        if(this.sfuserIsActive == false ) 
+        {
+            //if user deactivated at SF side mark it deactive at valamis side.
+        	userData.active = false;
+        } 
+        else 
+        {
+            system.debug('ValamisfetchedUserActiveStatus'+ValamisfetchedUserActiveStatus);
+            //if user is active at SF side preserve user status at valamis side. 
+            userdata.active =  this.ValamisfetchedUserActiveStatus;    
+        }
         HttpRequest httpRequest = new HttpRequest();  
         httpRequest.setMethod('PUT');             
         httpRequest.setHeader('Content-Type', 'application/json');
@@ -290,6 +327,8 @@ public class AH_SCIM_UserSyncCallout
         String jsonBody = json.serialize(userData);
         if (jsonBody != null) 
         {
+            jsonBody = jsonBody.replace('urn_ietf_params_scim_schemas_extension_valamis_2_0_User', 'urn:ietf:params:scim:schemas:extension:valamis:2.0:User');
+            system.debug('json:'+jsonBody);
             httpRequest.setBody(jsonBody);
             httpRequest.setHeader('Content-length',string.valueOf(jsonBody.length()));
         }
@@ -300,12 +339,12 @@ public class AH_SCIM_UserSyncCallout
 			HttpResponse httpResponse = http.send(httpRequest);  
             if (httpResponse.getStatusCode() == 200 || httpResponse.getStatusCode() == 201) 
             {  
-                String responseBody = httpResponse.getBody(); 
+                String responseBody = httpResponse.getBody(); system.debug('user updated');
                 AH_SCIM_user user = (AH_SCIM_user)JSON.deserialize(httpResponse.getBody(),AH_SCIM_user.class);
             } 
 			else 
 		    {  
-				throw new CalloutException(httpResponse.getBody());  
+				throw new CalloutException( httpResponse.getStatusCode() +''+ httpResponse.getBody());
             }   
         } 
         catch( System.Exception e) 
