--- a/force-app/main/default/classes/DTS_Integration_Logger.cls
+++ b/force-app/main/default/classes/DTS_Integration_Logger.cls
@@ -1,12 +1,13 @@
 /************************************************************************************************
 Name            : DTS_Integration_Logger Class
-Author          : Ganesh Bora
+Created By      : Ganesh Bora
 Created Date    : 02/17/2022
-Last Mod Date   : 02/17/2022
-Last Mod By     : Ganesh Bora
+Last Mod Date   : 
+Last Mod By     : 
 NICC Reference  : NICC-056411
 Description     : Class that contains static method for writing apex and custom log messages
                 : to the custom object DTS_Integration_Log_c
+				: Concept replicated from NI_Error_Logger.cls
 *************************************************************************************************/
 public class DTS_Integration_Logger
 {
@@ -20,13 +21,14 @@ public class DTS_Integration_Logger
         
         try
         {
-            DTS_Integration_Log__c log = new DTS_Integration_Log__c();
+           
+            /*DTS_Integration_Log__c log = new DTS_Integration_Log__c();
             log.Summary__c = 'Object :'+strObjectName+'Apex Class : '+strClassName+'DML Type:'+strDMLType+' Message:'+strMessage;
 			log.Type__c = strLogType;
             log.Date_Time__c = Datetime.now();
-            log.Integration_Status__c = 'Active';
-            
-            insert log;
+            log.Integration_Status__c = 'Active';            
+            insert log;*/
+			
         } 
         catch (Exception ex) 
         {
