W-030932	Add Search Functionality to the AH_CostControlUpdate Visualforce Page Added Permission Set Modification and Test Coverage

--- a/force-app/main/default/classes/AH_CostControlUpdate_Ext_Test.cls
+++ b/force-app/main/default/classes/AH_CostControlUpdate_Ext_Test.cls
@@ -85,6 +85,8 @@ public class AH_CostControlUpdate_Ext_Test
             cstController.doSave();
             cstController.getDisablePrevious();
             cstController.getDisableNext();
+            cstController.search();
+            cstController.clear();
             cstController.Next();
             cstController.Previous();
             
