--- a/force-app/main/default/classes/DevOpsClass_Test1.cls
+++ b/force-app/main/default/classes/DevOpsClass_Test1.cls
@@ -1,5 +1,5 @@
 /**********************************************************************************************************
-Name            : DevOpsClass_Test Class
+Name            : DevOpsClass_Test1 Class
 Author          : Sean Harris
 Created Date    : 09/21/2022
 Last Mod Date   : 09/21/2022
@@ -8,12 +8,12 @@ NICC Reference  :
 Description     : DEVOPS TEST
 ***********************************************************************************************************/
 @isTest
-public class DevOpsClass_Test 
+public class DevOpsClass_Test1 
 {
 
     static testMethod void test1() 
     { 
-        string s = DevOpsClass.testString(); 
+        string s = DevOpsClass1.testString(); 
         system.assertEquals('Hello World!', s);
     }
     
