--- a/force-app/main/default/classes/DevOpsClass.cls
+++ b/force-app/main/default/classes/DevOpsClass.cls
@@ -12,7 +12,7 @@ public class DevOpsClass
 
     public static string testString()
     {        
-        return 'Hello World! this is retest';
+        return 'Hello World! this is retest for the team';
     }
     
 }
