--- a/force-app/main/default/classes/DevOpsClass_Test.cls
+++ b/force-app/main/default/classes/DevOpsClass_Test.cls
@@ -14,7 +14,7 @@ public class DevOpsClass_Test
     static testMethod void test1() 
     { 
         string s = DevOpsClass.testString(); 
-        system.assertEquals('Hello World! this is retest for the team for deployment with full test', s);
+        system.assertEquals('Hello World! this is retest for the team for deployment with full test with team', s);
     }
     
 }
